# CloudBox

./: .gitignore  LICENSE  README.md  default.nix  manage.py  pyproject.toml  shell.nix  testing.py
cloud_box/: asgi.py  settings.py  urls.py  wsgi.py
main/: gcp_api.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_rename_p_key_box_private_key_box_public_key.py  0003_remove_box_description.py  0004_alter_box_name_alter_user_username.py  0005_box_ip.py
main/templates/: about.html  base.html  box_list.html  confirm.html  contact.html  form_base.html  home.html
main/templates/registration/: logged_out.html  login.html  register.html
main/templatetags/: form_tags.py  util_tags.py
