[tool.poetry]
name = "cloud-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
webssh = "^1.6.2"
paramiko = "^3.3.1"
google-cloud-compute = "^1.14.1"
gunicorn = "^21.2.0"
black = "^23.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
